# pjproject

./: .gitignore  BUILD.bazel  INTERCOM_README.md  pkgconfig.py
pjlib/src/pj/: ioqueue_epoll.c  ioqueue_kqueue.c  ioqueue_select.c
pjmedia/include/pjmedia/: conference.h  stream.h  videodev.h
pjmedia/include/pjmedia-codec/: ffmpeg_vid_codecs.h
pjmedia/src/pjmedia/: agc.c  agc.h  conf_switch.c  conference.c  endpoint.c  ffmpeg_util.h  format.c  stream_info.c  vid_conf.c  vid_port.c
pjmedia/src/pjmedia-audiodev/: agc_dev.c  alsa_dev.c  audiodev.c
pjmedia/src/pjmedia-codec/: h264_packetizer.c  intercom_codec.c  nalparse.c  nalparse.h  verkada_codec.c
pjmedia/src/pjmedia-videodev/: ffmpeg_dev.c  intercom_dev.c  verkada_dev.c  videodev.c
pjsip-apps/src/confbot/: confbot.py  config.py
pjsip-apps/src/pjsua/: main.c  pjsua_app.c
pjsip-apps/src/py_pjsua/: pjsua.py  pjsua_app.py  setup.py
pjsip-apps/src/pygui/: account.py  accountsetting.py  application.py  buddy.py  call.py  chat.py  chatgui.py  endpoint.py  log.py  settings.py
pjsip-apps/src/python/: pjsua.py  setup-vc.py  setup.py
pjsip-apps/src/samples/: vid_streamutil.c
pjsip-apps/src/swig/: importsym.py  symbols.i
pjsip/include/pjsua-lib/: pjsua.h
pjsip/include/pjsua2/: call.hpp  media.hpp
pjsip/src/pjsip/: sip_dialog.c  sip_endpoint.c  sip_resolve.c  sip_transaction.c  sip_util.c
pjsip/src/pjsip-ua/: sip_inv.c
tests/automated/: configure.py  run_continuous.py  run_scenario.py
tests/cdash/: builder.py  cfg_gnu.py  cfg_msvc.py  cfg_site_sample.py  cfg_symbian.py  main.py
tests/fuzz/: fuzz-h264.c
tests/pjsua/: config_site.py  inc_cfg.py  inc_const.py  inc_sdp.py  inc_sip.py  mod_call.py  mod_media_playrec.py  mod_pesq.py  mod_pres.py  mod_recvfrom.py  mod_sendto.py  mod_sipp.py  run.py  runall.py
(+218 files in other folders)
